# cwl-dl

./: .gitignore  README.md  cwl_downloader.py  pyproject.toml
.github/workflows/: publish.yml
src/cwl_dl/: auth.py  downloader.py
